@@ -1,3 +1,6 @@
+2009-01-06 Steve Chu <stvchu@gmail.com>
+  * new 'rget' command patch for 'memcache.py'
+
 2008-12-25 Version 1.2.1-beta released
 
 2008-12-10 Steve Chu <stvchu@gmail.com>
